# zurihac-plays

./: LICENSE  README.md  stack.yaml  zurihac-plays.cabal
app/: debugsink.hs  server.hs  xsink.hs
cbits/: fakekey.c
src/ZuriHac/Plays/: DebugSink.hs  KeyVoting.hs  Prelude.hs  Protocol.hs  Server.hs  Sink.hs  TH.hs  XSink.hs
src/ZuriHac/Plays/XSink/: FakeKey.hs
static/: client.html
