name:                zurihac-plays
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bitonic/zurihac-plays#readme
license:             BSD3
license-file:        LICENSE
author:              Francesco Mazzoli
maintainer:          f@mazzo.li
copyright:           Francesco Mazzoli 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    ZuriHac.Plays.Server
    ZuriHac.Plays.XSink
    ZuriHac.Plays.Protocol
    ZuriHac.Plays.TH
    ZuriHac.Plays.Prelude
  build-depends:
    base >= 4.7 && < 5,
    aeson,
    text,
    solga,
    unordered-containers,
    stm,
    lucid,
    wai,
    warp,
    http-types,
    bytestring
  default-language:    Haskell2010
  default-extensions:
    StrictData
    TemplateHaskell
    NoImplicitPrelude
    TypeOperators
    DeriveGeneric
    DataKinds
    TypeFamilies

executable zurihac-plays-server
  hs-source-dirs:      app
  main-is:             server.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , zurihac-plays
  default-language:    Haskell2010

executable zurihac-plays-xsink
  hs-source-dirs:      app
  main-is:             xsink.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , zurihac-plays
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bitonic/zurihac-plays
